@@ -14,6 +14,10 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove unused variable. Use safe string functions.
+ server/alchemy.c
+Nicolas Weeger 2008-03-29
+
 Use try_find_archetype() instead of find_archetype() and remove the nroferrors
 handling.
  random_maps/wall.c
